@@ -7,10 +7,12 @@ Grok changes
 Feature changes
 ---------------
 
+* Added an OrderedContainer component.
+
 * Merged the versions from the 3.4 KGS:
   http://download.zope.org/zope3.4/versions-3.4.0c1.cfg
 
-  We are now using the latest Zope 3 releases for all the Zope 
+  We are now using the latest Zope 3 releases for all the Zope
   For upgrade notes, see doc/upgrade.txt for more information.
 
 * Added support for easier testsetup based on z3c.testsetup. This is a
